--- a/index.css
+++ b/index.css
@@ -1,4 +1,5 @@
 body {
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: rgba(0, 0, 0, 1.0);
 }
-/*background-color: rgba(0, 200, 255, 0.5);*/
+/*background-color: rgba(0, 200, 255, 0.5); light blue background*/
+/*background-color: rgba(255, 255, 255, 0.5); white background*/
